Improve git ignore and git attributes.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@
 # Visual Studio cache directory
 .vs/
 .vscode/
+.vsconfig
+
+# Rider cache directory
+.idea
 
 # Gradle cache directory
 .gradle/
@@ -73,4 +77,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-.DS_Store
+
+# Ignore the Unity Package lock file
+Packages/packages-lock.json
